fix: ingress and header will not overflow on mobile

--- a/src/index/index.module.css
+++ b/src/index/index.module.css
@@ -357,4 +357,17 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  margin: 0 1rem;
+}
+
+@media (max-width: 700px) {
+  .tjenesteomrader__ingress {
+    text-align: center;
+  }
+}
+
+@media (max-width: 400px) {
+  .tjenesteomrader .join_title {
+    font-size: 3rem;
+  }
 }
